[gd_scene load_steps=5 format=3 uid="uid://bfwc8j3vb27sxy"]

[ext_resource type="Script" uid="uid://cavrwn7jxllnm" path="res://scripts/Player.gd" id="1"]
[ext_resource type="Script" uid="uid://cavrwn7jxllnm" path="res://scripts/GameWorld.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dg36vwmkn0t3f" path="res://scenes/GarbageIssue.tscn" id="3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_player"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_interaction"]
radius = 100.0

[node name="GameWorld" type="Node2D"]
script = ExtResource("2")

[node name="TileMap" type="TileMap" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 50.0
text = "Civic Score: 0"
theme_override_font_sizes/font_size = 16

[node name="HelpLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 90.0
text = "WASD to move, E to interact"
theme_override_font_sizes/font_size = 12

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(400, 300)
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_player")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate = Color(0.2, 0.8, 0.2, 1)
scale = Vector2(0.8, 0.8)

[node name="InteractionArea" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/InteractionArea"]
shape = SubResource("CircleShape2D_interaction")

[node name="Camera2D" type="Camera2D" parent="Player"]
enabled = true

[node name="CivicIssues" type="Node2D" parent="."]

[node name="GarbageIssue1" parent="CivicIssues" instance=ExtResource("3")]
position = Vector2(600, 300)

[node name="GarbageIssue2" parent="CivicIssues" instance=ExtResource("3")]
position = Vector2(200, 400)

[node name="GarbageIssue3" parent="CivicIssues" instance=ExtResource("3")]
position = Vector2(700, 500)

[node name="EndGameArea" type="Area2D" parent="."]
position = Vector2(900, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndGameArea"]
shape = CircleShape2D
radius = 50.0

[connection signal="area_entered" from="EndGameArea" to="." method="_on_end_game_area_entered"]
